add form controls

--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
 <body>
 	<H1>Room BOoking</H1>
 
+<form>
+<label for="room-capacity">Group Size</label>
+<select id="room-capacity" class="form-control">
+  <option>1</option>
+  <option>2</option>
+  <option>3</option>
+  <option>4</option>
+  <option>5</option>
+</select>
+
+<label for="preferred-time">Preferred Time</label>
+<input id=preferred-time" type="datetime" class="form-control" placeholder="Text input">
+
+<label for="duration">Duration</label>
+<select id="duration" class="form-control">
+  <option>30 min</option>
+  <option>1 hour</option>
+  <option>2 hour</option>
+  <option>All day</option>
+</select>
+
+</form>
+
 
 </body>
 
