--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
 <!-- Latest compiled and minified JavaScript -->
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<link rel="stylesheet" href="jquery.ptTimeSelect.css">
+<script src="jquery.ptTimeSelect.js"></script>
 </head>
 <body>
 
@@ -30,7 +32,12 @@
 
 		<div class="form-group">
 		<label for="preferred-time">Preferred Time</label>
-		<input id=preferred-time" type="datetime" class="form-control" placeholder="1pm">
+		<input id="preferred-time" type="text" class="form-control">
+		<script type="text/javascript">
+    $(document).ready(function(){
+        $('#preferred-time').ptTimeSelect();
+    });
+</script>
 		</div>
 
 		<div class="form-group">
