--- a/index.html
+++ b/index.html
@@ -50,10 +50,23 @@
 		</select>
 		</div>
 
-		<button type="submit" class="btn btn-default">Submit</button>
-
 	</form>
 
+	<div id="room-list"></div>
+	</div>
+	<script>
+	$(document).ready(function(){
+		$.getJSON('/rooms.json', function(roomdata){
+		  var $ul = $('ul').addClass('list-group');
+		  $.each(roomdata.rooms, function(idx, obj){
+		    $ul.append(
+		    	$("<li>").addClass('list-group-item').html(obj.name + ', min: ' + obj.minCap + ', max:' + obj.maxCap)
+		    );
+		  });
+		  $("#room-list").append($ul);
+		});
+	});
+	</script>
 </div>
 </body>
 </html>
