--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 <!-- Latest compiled and minified JavaScript -->
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="jquery.ptTimeSelect.css">
 <script src="jquery.ptTimeSelect.js"></script>
 </head>
@@ -56,7 +56,7 @@
 	</div>
 	<script>
 	$(document).ready(function(){
-		$.getJSON('/rooms.json', function(roomdata){
+		$.getJSON('./rooms.json', function(roomdata){
 		  var $ul = $('ul').addClass('list-group');
 		  $.each(roomdata.rooms, function(idx, obj){
 		    $ul.append(
