--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 	$(document).ready(function(){
 		$.getJSON('./rooms.json', function(roomdata){
 		console.log(roomdata);
-		  var $ul = $('ul').addClass('list-group');
+		  var $ul = $('<ul>').addClass('list-group');
 		  $.each(roomdata.rooms, function(idx, obj){
-		  	console.log(idx + ' : ' + obj);
+		  	console.log(obj);
 		    $ul.append(
 		    	$("<li>").addClass('list-group-item').html(obj.name + ', min: ' + obj.minCap + ', max:' + obj.maxCap)
 		    );
