--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 
 		});
 		
+    $('#room-list').on('click', '.list-group-item', function(evt){
+      alert('show details of room ' + $(this).data('room'))
+    });
 	});
 	</script>
 </div>
