room name jquery data

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		});
 		
     $('#room-list').on('click', '.list-group-item', function(evt){
-      alert('show details of room ' + $(this).data('room'))
+      alert('show details of room ' + $(this).data('roomName'))
     });
 	});
 	</script>
