collapse all by default

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   'data-toggle' : 'collapse',
                   'data-parent' : '#room-list-accordion',
                   'href' : '#collapse-'+idx
-                }).html(obj.room)
+                }).html(obj.room).addClass('collapsed')
               )
             ),
             $("<div>").attr({
