--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             'id' : 'collapse-'+idx,
             'role': 'tabpanel'
             }).
-            addClass('panel-collapse collapse in').
+            addClass('panel-collapse collapse').
             append(
              $('<div>').addClass('panel-body').html('add a full description here.')
             )
