--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
             }).
             addClass('panel-collapse collapse').
             append(
-             $('<div>').addClass('panel-body').html('add a full description here.')
+             $('<div>').addClass('panel-body').append(
+               $("<div>").html('add a full description here'),
+               $("<img>").attr({
+                 'src' : obj.imgurl
+               }),
+               $("<div>").html(obj.description)
+             )
             )
           )  
 		    );
