fix data-hidden-by undefined bug

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
           data("minBook", obj.minBook).
           data("maxBook", obj.maxBook).
           data("roomName",obj.room).
+          data("hidden-by", "").
           append(
             $("<div>").addClass('panel-heading').append(
               $('<h4>').addClass('panel-title').append(
