--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		$.each(roomdata.rooms, function(idx, obj){
 		  $panelGroup.append(
 		    	$("<div>").addClass('panel panel-default').
+          attr('id', 'panel-'+idx).
           data("minCap",obj.minCap).
           data("maxCap", obj.maxCap).
           data("minBook", obj.minBook).
