stupid option value typo

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		<div class="form-group">
 		<label for="duration">Duration</label>
 		<select id="duration" class="form-control">
-		  <option val="30">30 min</option>
-		  <option val="60">1 hour</option>
-		  <option val="120">2 hour</option>
-		  <option val="9999">All day</option>
+		  <option value="30">30 min</option>
+		  <option value="60">1 hour</option>
+		  <option value="120">2 hour</option>
+		  <option value="9999">All day</option>
 		</select>
 		</div>
 
