--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                $("<div>").append(
                  $("<a>").attr({
                    "role" : "button",
-                   "class" : "btn btn-primary"
+                   "class" : "btn btn-primary",
                    "href" : "#"
                  }).html("Book this room")
                )
